--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # If you have a build step (e.g., npm run build) add it here.
+      # Optional build step
       # - name: Build site
       #   run: |
       #     npm ci
@@ -23,34 +23,36 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-region: us-east-1        
+          aws-region: us-east-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      
-      # Debug step to confirm secrets & credentials are working
+      # Install AWS CLI (sometimes not pre-installed)
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
+      # Debug credentials
       - name: Debug AWS identity
         run: aws sts get-caller-identity
 
       - name: Sync to S3
         run: |
-          # directory to deploy (change if your build output is elsewhere)
           SOURCE_DIR=public
           BUCKET=harshitha-static-website      
-          # Sync files - sets cache-control for static assets & public read
+
+          # Sync files - long cache for assets, no-cache for index.html
           aws s3 sync "$SOURCE_DIR" "s3://$BUCKET" \
             --delete \
             --acl public-read \
             --cache-control "max-age=31536000,public" \
-            --exclude "index.html" \
-          && aws s3 cp "$SOURCE_DIR/index.html" "s3://$BUCKET/index.html" \
+            --exclude "index.html"
+
+          aws s3 cp "$SOURCE_DIR/index.html" "s3://$BUCKET/index.html" \
             --acl public-read \
             --content-type "text/html; charset=utf-8" \
             --cache-control "no-cache, no-store, must-revalidate"
 
-      - name: Wait 3s (allow S3 eventual consistency)
+      - name: Wait for S3 consistency
         run: sleep 3
-
-
-
-      
